--- a/p1/day12/lab/booking-add.html
+++ b/p1/day12/lab/booking-add.html
@@ -18,9 +18,9 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-link" href="booking-add.html">Create Booking</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="booking-edit.html">Edit Booking</a>
-                  </li>
+                  </li> -->
                 </ul>
                 <form class="d-flex" role="search">
                     <button class="btn btn-outline-danger" type="submit">Logout</button>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="container-fluid mt-4" align="center">
-        <h5>Create Booking</h5>
+        <h5>Create a new booking</h5>
     </div>
 
     <div class="container">
