--- a/p1/day12/lab/booking-list.html
+++ b/p1/day12/lab/booking-list.html
@@ -18,9 +18,9 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-link" href="booking-add.html">Create Booking</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="booking-edit.html">Edit Booking</a>
-                  </li>
+                  </li> -->
                 </ul>
                 <form class="d-flex" role="search">
                   <button class="btn btn-outline-danger" type="submit">Logout</button>
